[tool.poetry]
name = "thymed"
version = "0.7.1"
description = "Thymed"
authors = ["Benjamin Crews <aceF22@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/czarified/thymed"
repository = "https://github.com/czarified/thymed"
documentation = "https://thymed.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = ">=8.0.1"
toml = ">=0.10.2"
rich = ">12.5.1"
pandas = ">2.2.0"
openpyxl = ">=3.0.10"
textual = ">0.38.1"
textual-plotext = ">0.2.1"
textual-datepicker = ">=0.2.4"

[tool.poetry.urls]
Changelog = "https://github.com/czarified/thymed/releases"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8.0"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
textual-dev = ">=1.2.1"

[tool.poetry.scripts]
thymed = "thymed.__main__:main"
punch = "thymed.__main__:punch_default"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["thymed", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 30

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
